--- a/bolt-api/subsystems/hasura/migrations_backup/1561381226173_init.up.yaml
+++ b/bolt-api/subsystems/hasura/migrations_backup/1561381226173_init.up.yaml
@@ -2308,6 +2308,7 @@
           allow_aggregations: true
           columns:
           - argo_name
+          - argo_namespace
           - commit_hash
           - configuration_id
           - created_by_id
@@ -2346,6 +2347,7 @@
           allow_aggregations: true
           columns:
           - argo_name
+          - argo_namespace
           - commit_hash
           - configuration_id
           - created_by_id
@@ -2381,6 +2383,7 @@
           allow_aggregations: true
           columns:
           - argo_name
+          - argo_namespace
           - commit_hash
           - configuration_id
           - created_by_id
@@ -2419,6 +2422,7 @@
           allow_aggregations: true
           columns:
           - argo_name
+          - argo_namespace
           - commit_hash
           - configuration_id
           - created_by_id
@@ -2454,6 +2458,7 @@
           allow_aggregations: false
           columns:
           - argo_name
+          - argo_namespace
           - commit_hash
           - configuration_id
           - created_by_id
