--- a/bolt-portal/Makefile
+++ b/bolt-portal/Makefile
@@ -1,5 +1,5 @@
 build:
-	docker build \
+	docker build --no-cache \
     --build-arg auth_service=${BOLT_AUTH_SERVICE} \
     --build-arg auth_service_url=${BOLT_AUTH_SERVICE_BASE_URL} \
     --build-arg auth_keycloak_url=${BOLT_KEYCLOAK_URL} \
